# project-manager

./: .gitignore  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  owner.rs  payments.rs  prelude.rs  projects.rs  repository.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20230611_191008_owners_table.rs  m20230611_191017_projects_table.rs  m20230611_191023_payments_table.rs  m20230611_194329_repositories_table.rs
src-tauri/src/: database.rs  errors.rs  main.rs
src-tauri/src/services/: mod.rs  owners.rs  payments.rs  projects.rs
src/app/: layout.tsx  page.tsx  projects.tsx
src/components/: AddOwnerButton.tsx  AddProjectButton.tsx  CreateOwner.tsx  CreatePayment.tsx  CreateProject.tsx  DeleteProject.tsx  ListProjects.tsx  ModalService.tsx  ProjectCard.tsx  WatchOwnerDetails.tsx  WatchPayments.tsx
src/constants/: enums.ts  models.ts
src/contexts/: backdrop.context.tsx  modal.context.tsx  modal.service.tsx
src/models/: Owner.ts  Payment.ts  Project.ts
src/services/: BackdropService.tsx  ModalService.tsx
