[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
tokio= { version = "1.28.2", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log="0.4.19"
dotenv="0.15.0"
uuid="1.3.3"
chrono="0.4.26"
tauri = { version = "1.3.0", features = [] }
entity = { path = "entity" }
migration = { path = "migration" } 
bigdecimal= { version = "0.3.1", features = ["serde"] }

[dependencies.sea-orm]
version = "^0"
features = ["with-uuid", "bigdecimal", "chrono", "with-bigdecimal", "with-chrono"]
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
