[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1.0.164"
bigdecimal={ version = "0.3.1", features = ["serde"] }
chrono="0.4.26"
[dependencies.sea-orm]
version = "^0"
features = ["uuid", "with-uuid", "with-bigdecimal", "bigdecimal", "chrono", "with-chrono"]
